--- a/shader-communication/3.draw-rectangle.html
+++ b/shader-communication/3.draw-rectangle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>draw-render</title>
+    <title>draw-rectangle</title>
     <style>
       * {
         padding: 0;
