--- a/3.triangle/4-triangle-face.html
+++ b/3.triangle/4-triangle-face.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>draw-triangle-face</title>
+    <title>triangle-face</title>
     <style>
       * {
         padding: 0;
@@ -57,7 +57,7 @@
 
       gl.enableVertexAttribArray(a_Position)
 
-      gl.clearColor(0, 0, 0, 1)
+      gl.clearColor(0.0, 0.0, 0.0, 1.0)
 
       gl.clear(gl.COLOR_BUFFER_BIT)
 
